
Bugfixes
        Row updates sometimes breaking in IE                                  | See #241
        NPE when layout(cell|row) was provided empty class ""                 | See change #117
        MessageContext losing message ordering                                | See #244
        OutputData and InputData are not Serializable anymore                 | See change #114

API Changes
        Lists API did change substantially.
        Form lists API changed quite substantially.
        ErrorUtil -> MessageUtil
        CompositeConstraint -> BaseCompositeConstraint
        DisplayItemUtil.addItemsFromVoCollection -> addItemsFromBeanCollection
        RelocatableWidgetDecorator -> RelocatableDecorator
        RelocatableServiceDecorator -> RelocatableDecorator


2006.09.11    | Aranea 1.0-RC3

Features and Improvements
        Constraints internals were rewritten                                  | See change #107
        TransactionFilterWidget does not consider NULL id valid anymore       | See change #107
        Some standard components were documented                              | See change #106

Bugfixes
        BeanUtil.copy(Object from, Class toType) did not work                 | See change #108

API Changes
        None

---------------------------------------------------------------------------------------------
2006.09.01    | Aranea 1.0-RC2

Features and Improvements
        Additional methods in MessageContext                                  | See #233
        Javadoc has been cleaned up and updated                               | See #221
        In example application, invalid form fields are highlighted now

Bugfixes
        Opening links in new window did not work with url-encoded session IDs | See #234
        Some buggy addElement methods were fixed (concerned list filters)     | See change #100
        SqlStatement did not work with any DB besides HSQLDB anymore          | See change #101