@@ -13,6 +13,7 @@ Bugfixes
         NPE when layout(cell|row) was provided empty class ""                 | See change #117
         MessageContext losing message ordering                                | See #244
         OutputData and InputData are not Serializable anymore                 | See change #114
+        DateTimeControl value could not be set by programmer                  | See change #120
 
 API Changes
         Lists API did change substantially.
